--- a/aspnetmvc/session3/ViewsDemo/ViewsDemo/Views/Shared/_ErrorLayout.cshtml
+++ b/aspnetmvc/session3/ViewsDemo/ViewsDemo/Views/Shared/_ErrorLayout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>_ErrorLayout</title>
-    @RenderSection("styles",false)
+    @RenderSection(name: "styles", required: false)
 </head>
 <body>
     <div>
