added custom attributes

--- a/aspnetmvc/session3/ViewsDemo/ViewsDemo/Views/Picture/Index.cshtml
+++ b/aspnetmvc/session3/ViewsDemo/ViewsDemo/Views/Picture/Index.cshtml
@@ -5,6 +5,8 @@
 
 <h2>Picture\Index</h2>
 
+<a href="~/picture/create">Create New</a>
+
 <table class="table table-striped">
     <thead>
         <tr>
