--- a/aspnetmvc/session3/ViewsDemo/ViewsDemo/Views/Picture/Create.cshtml
+++ b/aspnetmvc/session3/ViewsDemo/ViewsDemo/Views/Picture/Create.cshtml
@@ -1,43 +1,22 @@
-﻿@model ViewsDemo.Models.Picture
-
+﻿
 @{
     ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Picture</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.DisplayName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DisplayName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DisplayName, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
+<form action="/picture/create" method="post">
+    <label for="display-name">Name</label>
+    <input type="text" id="display-name" name="DisplayName" placeholder="type name here..." />
+    <br />
+    <label for="url">Url</label>
+    <input type="text" id="url" name="url" placeholder="type url here..." />
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <input type="submit"  value="create new"/>
+</form>
+@*{
+    "DisplayName":"asdasdasda",
+    "url":"asdasd"
+}*@
