--- a/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Songs/Index.cshtml
+++ b/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Songs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Sedc.MusicManager.WebApp.Models.Song>
+﻿@model IEnumerable<Sedc.MusicManager.WebApp.ViewModels.SongWithAlbumViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -23,6 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.AlbumId)
         </th>
+        <th>
+            Album
+        </th>
         <th></th>
     </tr>
 
@@ -39,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AlbumId)
+        </td>
+        <td>
+            @item.Album.Title
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
