added delete view

--- a/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Songs/Delete.cshtml
+++ b/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Songs/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sedc.MusicManager.WebApp.Models.Song
+﻿@model Sedc.MusicManager.WebApp.ViewModels.SongWithAlbumViewModel
 
 @{
     ViewBag.Title = "Delete";
@@ -12,27 +12,35 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.Song.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.Song.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Song.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Song.Description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Duration)
+            @Html.DisplayNameFor(model => model.Song.Duration)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Duration)
+            @Html.DisplayFor(model => model.Song.Duration)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AlbumTitle)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AlbumTitle)
         </dd>
 
     </dl>
