--- a/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Songs/Edit.cshtml
+++ b/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Songs/Edit.cshtml
@@ -41,6 +41,10 @@
             </div>
         </div>
 
+        @foreach (var item in ViewBag.Albums)
+        {
+
+        }
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -48,6 +52,8 @@
             </div>
         </div>
     </div>
+
+
 }
 
 <div>
