added auto-generated albums controller

--- a/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Albums/Details.cshtml
+++ b/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Albums/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Artist.FullName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Artist.FullName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
 
