moved models into separate project

--- a/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Artists/Index.cshtml
+++ b/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Artists/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Sedc.MusicManager.WebApp.Models.Artist>
+﻿@model IEnumerable<Sedc.MusicManager.DomainModels.Artist>
 
 @{
     ViewBag.Title = "Index";
