--- a/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Home/Index.cshtml
+++ b/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sedc.MusicManager.WebApp.Models.Song
+﻿@model Sedc.MusicManager.DomainModels.Song
           model(some data from somewhere)
 controller----------------------------->view
 @{
