--- a/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Albums/Index.cshtml
+++ b/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.WebApp/Views/Albums/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Sedc.MusicManager.WebApp.Models.Album>
+﻿@model IEnumerable<Sedc.MusicManager.DomainModels.Album>
 
 @{
     ViewBag.Title = "Index";
