--- a/aspnetmvc/session9/AuthenticationDemo/Views/Products/Index.cshtml
+++ b/aspnetmvc/session9/AuthenticationDemo/Views/Products/Index.cshtml
@@ -6,9 +6,11 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (User.IsInRole("manager"))
+{
+    <p>@Html.ActionLink("Create New", "Create")</p>
+}
+
 <table class="table">
     <tr>
         <th>
@@ -20,20 +22,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Quantity)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @if (User.IsInRole("manager"))
+                {
+                    Html.ActionLink("Edit", "Edit", new { id = item.Id });
+
+                    Html.ActionLink("Delete", "Delete", new { id = item.Id });
+                }
+            </td>
+        </tr>
+    }
+    /**/
+    /**/
 
 </table>
